Update from https://github.com/k0wl0n/echo-app-cicd/commit/958a62d42c6be5d8e9a68b48e6267508677f921d

--- a/overlay/production/echo-app-cicd/kustomization.yaml
+++ b/overlay/production/echo-app-cicd/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
 - deployment.yaml
 - service.yaml
-namespace: staging
+namespace: production
 images:
 - name: kowlon/go-echo
   newName: 490004610217.dkr.ecr.ap-southeast-1.amazonaws.com/echo-app-cicd
-  newTag: stg-v.0.0.14
+  newTag: prod-v.0.0.1
